@@ -234,6 +234,11 @@ public:
         else
             dst->objective_arg_2 = _s4.scenario_objective_currency;
         dst->objective_arg_3 = _s4.scenario_objective_num_guests;
+        // This does not seem to be saved in the objective arguments, so look up the ID from the available rides instead.
+        if (_s4.scenario_objective_type == OBJECTIVE_BUILD_THE_BEST)
+        {
+            dst->objective_arg_3 = GetBuildTheBestRideId();
+        }
 
         auto name = rct2_to_utf8(_s4.scenario_name, RCT2_LANGUAGE_ID_ENGLISH_UK);
         std::string details;
@@ -2713,6 +2718,7 @@ private:
         gScenarioObjectiveType = _s4.scenario_objective_type;
         gScenarioObjectiveYear = _s4.scenario_objective_years;
         gScenarioObjectiveNumGuests = _s4.scenario_objective_num_guests;
+
         // RCT1 used a different way of calculating the park value.
         // This is corrected here, but since scenario_objective_currency doubles as minimum excitement rating,
         // we need to check the goal to avoid affecting scenarios like Volcania.
@@ -2720,6 +2726,10 @@ private:
             gScenarioObjectiveCurrency = CorrectRCT1ParkValue(_s4.scenario_objective_currency);
         else
             gScenarioObjectiveCurrency = _s4.scenario_objective_currency;
+
+        // This does not seem to be saved in the objective arguments, so look up the ID from the available rides instead.
+        if (_s4.scenario_objective_type == OBJECTIVE_BUILD_THE_BEST)
+            gScenarioObjectiveNumGuests = GetBuildTheBestRideId();
     }
 
     void ImportSavedView()
@@ -3120,6 +3130,26 @@ private:
                 ride.SetNameToDefault();
             }
         }
+    }
+
+    ObjectEntryIndex GetBuildTheBestRideId()
+    {
+        size_t researchListCount;
+        const rct1_research_item* researchList = GetResearchList(&researchListCount);
+        for (size_t i = 0; i < researchListCount; i++)
+        {
+            if (researchList[i].flags == 0xFF)
+            {
+                break;
+            }
+
+            if (researchList[i].type == RCT1_RESEARCH_TYPE_RIDE)
+            {
+                return RCT1::GetRideType(researchList[i].item, 0);
+            }
+        }
+
+        return RIDE_TYPE_NULL;
     }
 };
 
