@@ -296,7 +296,12 @@ public:
         gScenarioObjectiveYear = _s6.objective_year;
         // pad_013580FA
         gScenarioObjectiveCurrency = _s6.objective_currency;
-        gScenarioObjectiveNumGuests = _s6.objective_guests;
+        // In RCT2, the ride string IDs start at index STR_0002 and are directly mappable.
+        // This is not always the case in OpenRCT2, so we use the actual ride ID.
+        if (gScenarioObjectiveType == OBJECTIVE_BUILD_THE_BEST)
+            gScenarioObjectiveNumGuests = _s6.objective_guests - RCT2_RIDE_STRING_START;
+        else
+            gScenarioObjectiveNumGuests = _s6.objective_guests;
         ImportMarketingCampaigns();
 
         gCurrentExpenditure = _s6.current_expenditure;
